# svg-to-drawio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  build_desktop.py  desktop_app.py  main.py  mkdocs.yml  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  requirements-docs.txt  svg_decompose_to_drawio.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-build.yml  desktop-packaging.yml  docs.yml  pypi-publish.yml
docs/: advanced-rendering.md  api-reference.md  cli.md  index.md  interface-parity.md  python-api.md  quickstart.md  reference.md  release-downloads.md
packaging/linux/: AppRun  build_appimage.sh  build_deb.sh  build_flatpak.sh  build_rpm.sh  build_rpm_in_fedora_container.sh  common.sh  io.github.v1rg1lee.svg-to-drawio.desktop  io.github.v1rg1lee.svg-to-drawio.metainfo.xml  prune_bundle.sh  smoke_test_artifacts.sh
packaging/macos/: build_dmg.sh  smoke_test_artifacts.sh
packaging/windows/: build_installer.ps1  smoke_test_artifacts.ps1  svg-to-drawio.iss
scripts/: build_docs.py  generate_release_gpg_key.py  site_fingerprint.py
svg_to_drawio/: __init__.py  __main__.py  atomic_write.py  capabilities.py  capability_registry.py  cell_factory.py  cli.py  compatibility.py  conversion_cache.py  conversion_result.py  conversion_service.py  converter.py  css.py  defs.py  diagnostics.py  drawio_model.py  drawio_output.py  element_geometry.py  emitter_context.py  filter_effects.py  issue_codes.py  merge.py  path_arcs.py  path_bounds.py  path_parser.py  path_simplification.py  path_stencil.py  path_types.py  path_utils.py  polygon_clip.py  post_process.py  quality_gates.py  rendering_options.py  simple_clipping.py  simple_patterns.py  style_builder.py  styles.py  svg_fallback.py  text_metrics.py  text_path.py  (+2 more)
svg_to_drawio/elements/: foreign_object.py  gradient_approx.py  image.py  path.py  poly.py  shape_paths.py  shapes.py  (+3 more)
svg_to_drawio_desktop/: __init__.py  app.py  app_settings.py  cli_command.py  compatibility_view.py  pages.py  preview.py  preview_selection.py  preview_text.py  theme.py  widgets.py  worker.py
tests/: helpers.py  regenerate_fixtures.py
(+31 files in other folders)
