[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "svg-to-drawio"
dynamic = ["version"]
description = "Convert SVG files into editable draw.io diagrams."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "V1rg1lee" },
]
keywords = ["svg", "drawio", "diagrams-net", "diagrams", "converter", "xml", "vector-graphics", "diagramming"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/V1rg1lee/svg-to-drawio"
Documentation = "https://v1rg1lee.github.io/svg-to-drawio/"
Repository = "https://github.com/V1rg1lee/svg-to-drawio"
Issues = "https://github.com/V1rg1lee/svg-to-drawio/issues"

[project.scripts]
svg-to-drawio = "svg_to_drawio.cli:main"

[project.optional-dependencies]
text-metrics = [
  "Pillow>=10.0",
]
watch = [
  "watchdog>=6.0",
]
dev = [
  "build>=1.2",
  "hatchling>=1.27",
  "mypy==2.1.0",
  "pre-commit>=4.0",
  "ruff==0.15.18",
  "twine>=6.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
]

[tool.hatch.version]
path = "svg_to_drawio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["svg_to_drawio"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["svg_to_drawio", "svg_to_drawio_desktop", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["main.py", "desktop_app.py", "build_desktop.py", "svg_to_drawio", "svg_to_drawio_desktop"]
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["PyInstaller.*", "PySide6.*", "watchdog.*"]
ignore_missing_imports = true
